--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,7 +33,10 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 20
+        minSdkVersion 21
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+
     }
 
     lintOptions {
@@ -45,4 +48,5 @@ dependencies {
 //    implementation files('libs/kbzsdk.jar')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation(name:'kbzsdk_1.1.1', ext:'aar')
+    implementation 'com.android.support:multidex:1.0.3'
 }
