complete first version

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <application>
         <activity
             android:name="com.kbzbank.payment.sdk.callback.CallbackResultActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:exported="true" />
     </application>
 
